force-app/main/default/objects/NRV10RemunerationContract__c/NRV10RemunerationContract__c.object-meta.xml
<CustomObject>
    <label>Contrat de rémunération</label>
    <nameField>
        <label>Nom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contrats de rémunération</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>