force-app/main/default/objects/NRV10RemunerationContract__c/fields/assignedTo__c.field-meta.xml
<CustomField>
    <fullName>assignedTo__c</fullName>
    <formula>contract__r.assignedTo__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[#] Affecté à</label>
    <type>Text</type>
</CustomField>