force-app/main/default/objects/NRV10RemunerationContract__c/fields/collaborator__c.field-meta.xml
<CustomField>
    <fullName>collaborator__c</fullName>
    <formula>contract__r.collaborator__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[#] Collaborateur</label>
    <type>Text</type>
</CustomField>