force-app/main/default/objects/NRV10RemunerationContract__c/fields/contract__c.field-meta.xml
<CustomField>
    <fullName>contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrat collaborateur</label>
    <referenceTo>CollaboratorContract__c</referenceTo>
    <relationshipLabel>Contrats de rémunération (Contrat collaborateur)</relationshipLabel>
    <relationshipName>Contrats_de_r_mun_ration</relationshipName>
    <type>Lookup</type>
</CustomField>