force-app/main/default/objects/NRV10RemunerationContract__c/fields/employmentContractType__c.field-meta.xml
<CustomField>
    <fullName>employmentContractType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Type de contrat de travail</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>NRV10GridRevision__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>workingContract</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>NRV10GridRevision__c</referenceTo>
    <relationshipLabel>Contrats de rémunération</relationshipLabel>
    <relationshipName>Contrats_de_r_mun_ration</relationshipName>
    <type>Lookup</type>
</CustomField>