force-app/main/default/objects/NRV10RemunerationContract__c/fields/endDate__c.field-meta.xml
<CustomField>
    <fullName>endDate__c</fullName>
    <formula>contract__r.endDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[#] Date de fin</label>
    <type>Date</type>
</CustomField>