force-app/main/default/objects/NRV10RemunerationContract__c/fields/signatureDate__c.field-meta.xml
<CustomField>
    <fullName>signatureDate__c</fullName>
    <formula>contract__r.signatureDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[#] Date de signature</label>
    <type>Date</type>
</CustomField>