force-app/main/default/objects/NRV10RemunerationContract__c/fields/startDate__c.field-meta.xml
<CustomField>
    <fullName>startDate__c</fullName>
    <formula>contract__r.startDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[#] Date de début</label>
    <type>Date</type>
</CustomField>