force-app/main/default/objects/NRV10RemunerationContract__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>contract__c</columns>
    <columns>employmentContractType__c</columns>
    <columns>startDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>